dynamodel_tests/tests/fails/attribute/invalid_def.stderr
error: Unexpected meta-item format `list`
 --> tests/fails/attribute/invalid_def.rs:6:17
  |
6 |     #[dynamodel(into("from_vec_to_blob"))]
  |                 ^^^^
